--- a/student.html
+++ b/student.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Student Info</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -281,5 +281,6 @@
 
 </body>
 </html>
+
 
 
