--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <div class="dashboard-header">
     <div class="promo-banner">
-        <img src="css/building.png" alt="Dewan Agong Tuanku Canselor">
+        <img src="building.png" alt="Dewan Agong Tuanku Canselor">
     </div>
 </div>
 
@@ -80,7 +80,7 @@
         <div class="chart-card2">
             <a href="student.html" class="card-link">
                 <div class="card2">
-                    <img src="css/student.jpg" class="card2-image">
+                    <img src="student.jpg" class="card2-image">
                     <div class="card-content">
                         <p><b>Students Information</b></p>
                     </div>
@@ -91,7 +91,7 @@
         <div class="chart-card2">
             <a href="contact.html" class="card-link">
                 <div class="card2">
-                    <img src="css/courses.jpg" class="card2-image">
+                    <img src="courses.jpg" class="card2-image">
                     <div class="card-content">
                         <p><b>Contact Us</b></p>
                     </div>
@@ -102,7 +102,7 @@
         <div class="chart-card2">
             <a href="#" class="card-link">
                 <div class="card2">
-                    <img src="css/activity.jpg" class="card2-image">
+                    <img src="activity.jpg" class="card2-image">
                     <div class="card-content">
                         <p><b>SH University Activity</b></p>
                     </div>
@@ -113,7 +113,7 @@
         <div class="chart-card2">
             <a href="#" class="card-link">
                 <div class="card2">
-                    <img src="css/annoucement.png" class="card2-image">
+                    <img src="annoucement.png" class="card2-image">
                     <div class="card-content">
                         <p><b>SH University Announcement</b></p>
                     </div>
@@ -124,7 +124,7 @@
         <div class="chart-card2">
             <a href="#" class="card-link">
                 <div class="card2">
-                    <img src="css/media.jpg" class="card2-image">
+                    <img src="media.jpg" class="card2-image">
                     <div class="card-content">
                         <p><b>SH University Media</b></p>
                     </div>
@@ -167,4 +167,5 @@
 
 </body>
 </html>
+
 
