--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="chart-card2">
             <a href="school.html" class="card-link">
                 <div class="card2">
-                    <img src="css/logo.png" class="card2-image">
+                    <img src="logo.png" class="card2-image">
                     <div class="card-content">
                         <p><b>About SH University</b></p>
                     </div>
@@ -167,5 +167,6 @@
 
 </body>
 </html>
+
 
 
