--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us - SH University</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="header">
@@ -107,3 +106,4 @@
 
 </body>
 </html>
+
