--- a/login.html
+++ b/login.html
@@ -98,7 +98,7 @@
    
     <div class="login-header">
         
-        <img src="css/logo.png" alt="SH University Logo">
+        <img src="logo.png" alt="SH University Logo">
         <h2>Welcome to SH University<br>System Login</h2>
     </div>
 
@@ -146,3 +146,4 @@ function login() {
 
 </body>
 </html>
+
