--- a/register.html
+++ b/register.html
@@ -97,7 +97,7 @@
 
    
     <div class="login-header">
-        <img src="css/logo.png" alt="SH University Logo">
+        <img src="logo.png" alt="SH University Logo">
         <h2>Welcome to SH University<br>System Register</h2>
     </div>
 
@@ -149,3 +149,4 @@ function register() {
 
 </body>
 </html>
+
